# esp-idf-my-components

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  script_clone.py
Adafruit-GFX-Library/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_GrayOLED.cpp  Adafruit_GrayOLED.h  Adafruit_SPITFT.cpp  Adafruit_SPITFT.h  CMakeLists.txt  gfxfont.h  glcdfont.c
Adafruit-GFX-Library/Fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  (+43 more)
Adafruit_BME280/: Adafruit_BME280.cpp  Adafruit_BME280.h  CMakeLists.txt  LICENSE  README.md
Adafruit_BusIO/: Adafruit_BusIO_Register.cpp  Adafruit_BusIO_Register.h  Adafruit_GenericDevice.cpp  Adafruit_GenericDevice.h  Adafruit_I2CDevice.cpp  Adafruit_I2CDevice.h  Adafruit_SPIDevice.cpp  Adafruit_SPIDevice.h
Adafruit_INA219/: Adafruit_INA219.cpp  Adafruit_INA219.h  README.md
Adafruit_SSD1306/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  CMakeLists.txt  README.md  splash.h
Adafruit_Sensor/: .gitignore  Adafruit_Sensor.cpp  Adafruit_Sensor.h  CMakeLists.txt  README.md
PicoMQTT/: README.md  platformio.ini
RTClib/: keywords.txt
RadioLib/: CONTRIBUTING.md  README.md  library.json
TinyGPSPlus/: CMakeLists.txt  keywords.txt
espsoftwareerial/: CMakeLists.txt  README.md
espsoftwareserial/: CMakeLists.txt
ghostl/: CMakeLists.txt  library.properties
my_components/: CMakeLists.txt  my_components.c  my_components.h
my_components_cxx/: CMakeLists.txt  my_components.cpp  my_components.hpp
(+184 files in other folders)
